--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,6 +1,8 @@
 {% javascript vendor %}
 {% javascript application %}
 
+<script src="https://abhikmitra.github.io/machineLearningForStupidPeople/assets/vendor.js"></script>
+<script src="https://abhikmitra.github.io/machineLearningForStupidPeople/assets/application.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
 <script>
   WebFont.load({
