--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,9 @@
 <nav class="header-nav reveal">
-  <a href="{{ '/' | absolute_url }}" class="header-logo" title="{{ site.name }}">{{ site.name }}</a>
+  <a href="{{ '/' | relative_url }}" class="header-logo" title="{{ site.name }}">{{ site.name }}</a>
   <ul class="header-links">
     {% if site.about_enabled == true %}
       <li>
-        <a href="{{ 'about' | absolute_url }}" title="About me">
+        <a href="{{ 'about' | relative_url }}" title="About me">
           <span class="icon icon-android-person"></span>
         </a>
       </li>
@@ -66,7 +66,7 @@
     {% endif %}
     {% if site.rss_enabled == true %}
       <li>
-        <a href="{{ 'feed.xml' | absolute_url }}" target="_blank" title="RSS">
+        <a href="{{ 'feed.xml' | relative_url }}" target="_blank" title="RSS">
           <span class="icon icon-social-rss"></span>
         </a>
       </li>
