--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -66,7 +66,7 @@
     {% endif %}
     {% if site.rss_enabled == true %}
       <li>
-        <a href="{{ 'feed.xml' | relative_url }}" target="_blank" title="RSS">
+        <a href="{{ 'feed.xml' | absolute_url }}" target="_blank" title="RSS">
           <span class="icon icon-social-rss"></span>
         </a>
       </li>
