--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,3 +1,3 @@
 <a href="{% asset_path '{{ include.path-detail }}' %}" class="fluidbox-trigger">
-  <img src="{% asset_path '{{ include.path }}' %}" alt="{{ include.alt }}" />
+  <img src="{% asset_path '{{ include.path }}' | absolute_url %}" alt="{{ include.alt }}" />
 </a>
