--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
-{% assign asset_path = "liquidmarkup.com" %}
-<a href="{% asset_path '{{ include.path-detail }}' %}" class="fluidbox-trigger">
+
+<a href="{{ include.path-detail | absolute_url}}" class="fluidbox-trigger">
   <img src="{% asset_path '{{ include.path }}'   %}" alt="{{ include.alt }}" />
 </a>
