removed asset_path

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
 
 <a href="{{ include.path-detail | absolute_url}}" class="fluidbox-trigger">
-  <img src="{% asset_path '{{ include.path }}'   %}" alt="{{ include.alt }}" />
+  <img src="{{ include.path | absolute_url}}" alt="{{ include.alt }}" />
 </a>
