--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer reveal">
   <p>
-    <a href="{{ 'about' | relative_url }}" title="About me">Abhik Mitra</a>.
+    <a href="https://abhikmitra.github.io" title="About me">Maintained by Abhik Mitra</a>.
   </p>
 </footer>
